--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
         "vite": "^6.3.2"
     },
     "dependencies": {
-        "choices.js": "^11.1.0"
+        "choices.js": "^11.1.0",
         "tailwindcss": "^3.4.17",
         "vite": "^6.3.2"
+    },
+    "dependencies": {
+        "fecha": "^4.2.3",
+        "hotel-datepicker": "^4.12.0"
     }
 }
