--- a/package.json
+++ b/package.json
@@ -6,17 +6,13 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.11",
         "autoprefixer": "^10.4.21",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^1.2.0",
         "lodash": "^4.17.19",
         "postcss": "^8.5.3",
         "tailwindcss": "^4.1.8",
-        "vite": "^6.3.2"
-    },
-    "dependencies": {
-        "choices.js": "^11.1.0",
-        "tailwindcss": "^3.4.17",
         "vite": "^6.3.2"
     },
     "dependencies": {
